# EyeOfHorus

./: .gitignore  README.md  pyproject.toml
docs/: pyramid-texts-translated.md  semantic-network.md
docs/analysis/: 00-INDEX.md  01-primal-phonemic-sequence.md  02-phonemic-ontogeny.md  03-phonemic-ontogeny-synthesis.md  04-woman-weave-men.md  05-phonemic-lexicon-complete.md  06-408-grammar-architecture.md  07-pyramid-text-line1-yuga-mapping.md  08-fibonacci-breath-architecture.md  09-engine-completion-architecture.md  10-spine-phonemes-as-scales.md  11-wheel-phoneme-correction.md  12-layered-decode.md  13-bitwise-engine.md
eye_of_horus/: __init__.py  bitwise.py  corpus.py  engine.py  mapping.py  pyramid.py  rhythm.py  validation.py
eye_of_horus/data/: pyramid_texts_translated.json  semantic_network.json
tests/: test_bitwise.py  test_engine.py  test_integration.py  test_mapping.py  test_pyramid.py  test_rhythm.py  test_spine.py
