[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eye-of-horus"
version = "0.4.0"
description = "Egyptian phonemic analysis through the 16-position wheel and 408 grammar"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nicholas David Brown", email = "nick@livingcodex.org" }
]
keywords = ["egyptian", "hieroglyphics", "phonemic", "linguistics", "ancient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/NickBrownAI/EyeOfHorus"
Repository = "https://github.com/NickBrownAI/EyeOfHorus"

[project.optional-dependencies]
corpus = ["datasets>=4.0"]
dev = ["pytest", "black", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["eye_of_horus"]

[tool.hatch.build.targets.sdist]
include = [
    "eye_of_horus/**/*.py",
    "eye_of_horus/data/*.json",
]
