[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eye-of-horus"
version = "0.6.0"
description = "Phonemic analysis engine for ancient Egyptian texts — 16-position wheel, 408 grammar, bidirectional decode"
readme = "README.md"
license = "CC0-1.0"
authors = [
    { name = "Nicholas David Brown", email = "worldbridgerstudios@gmail.com" }
]
keywords = [
    "egyptian",
    "hieroglyphics",
    "phonemic",
    "linguistics",
    "ancient",
    "pyramid-texts",
    "translation",
    "computational-linguistics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/NickBrownAI/EyeOfHorus"
Repository = "https://github.com/NickBrownAI/EyeOfHorus"
Documentation = "https://github.com/NickBrownAI/EyeOfHorus#readme"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["eye_of_horus"]
exclude = ["eye_of_horus/data/tla_earlier_egyptian.json"]

[tool.hatch.build.targets.sdist]
include = [
    "eye_of_horus/**/*.py",
    "eye_of_horus/data/pyramid_texts_translated.json",
    "eye_of_horus/data/semantic_network.json",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
